Migrate AbstractMessageParserTest to JUnit5
Switch the test to use JUnit5 and modernize it a bit.

Change-Id: I3d485a08252a74c7b11d243329d23e16c3e8b478
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>